<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.radhouene.taxithirdtry.MainActivity">

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Email_Icon"
        android:src="@drawable/user60x60"
        android:layout_alignTop="@+id/LogEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/LogEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:layout_above="@+id/LogPass"
        android:layout_centerHorizontal="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/LogPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/LogEmail"
        android:layout_alignStart="@+id/LogEmail" />

    <ImageView
        android:id="@+id/passIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Pass_Icon"
        android:src="@drawable/pass60"
        android:layout_alignBottom="@+id/LogPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/LinkRegisterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:layout_marginBottom="40dp"
        android:text="@string/registerLink"
        android:textColor="#edac00"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:text="@string/Login"
        android:textColor="#fff"
        android:layout_above="@+id/LinkRegisterId"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_above="@+id/emailIcon"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/bgimage" />


</RelativeLayout>
